test/io/ferguson/channel-changing-type-error4.good
channel-changing-type-error4.chpl:3: In function 'main':
channel-changing-type-error4.chpl:8: error: cannot assign writing channel to reading channel
